correct overflow error

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .main_container{
     width: 100%;
     height: 100vh;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .navbar{
